--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "tailwindcss": "^3.3.5"
     }
 }
