--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "tailwindcss": "^3.3.5"
+        "bootstrap": "^5.3.2",
+        "jquery": "^3.7.1",
+        "popper.js": "^1.16.1"
     }
 }
